# netology_dl

./: 1.ipynb  EMNIST_README.md  densenet_history.json  emnist.ipynb  emnist_compare_models.py  emnist_densenet.py  emnist_inception.py  emnist_resnet18.py  emnist_run_all_models.py  emnist_vgg.py  fashion_mnist_classification.ipynb  inception_history.json  pyproject.toml  resnet18_history.json  sympsons.ipynb  sympsons.py  vgg16_history.json
